Added CZ, DE, DK, ES translations

--- a/i18n/cz/code.json
+++ b/i18n/cz/code.json
@@ -1,376 +1,376 @@
 {
   "theme.NotFound.title": {
-    "message": "Page Not Found"
+    "message": "Stránka nebyla nalezena"
   },
   "notfound.title": {
-    "message": "Oops! Page not found."
+    "message": "Oups! Stránka nebyla nalezena."
   },
   "notfound.message1": {
-    "message": "The page you are looking for doesn't exist."
+    "message": "Stránka, kterou hledáte, neexistuje."
   },
   "notfound.message2": {
-    "message": "You tried to access"
+    "message": "Snažili jste se přistoupit na"
   },
   "notfound.goBack": {
-    "message": "Go back to"
+    "message": "Vrátit se na"
   },
   "notfound.homepageLink": {
-    "message": "the homepage"
+    "message": "domovskou stránku"
   },
   "theme.ErrorPageContent.title": {
-    "message": "This page crashed."
+    "message": "Tato stránka se zhroutila."
   },
   "theme.BackToTopButton.buttonAriaLabel": {
-    "message": "Scroll back to top"
+    "message": "Přejít zpět na začátek"
   },
   "theme.blog.archive.title": {
-    "message": "Archive"
+    "message": "Archiv"
   },
   "theme.blog.archive.description": {
-    "message": "Archive"
+    "message": "Archiv"
   },
   "theme.blog.paginator.navAriaLabel": {
-    "message": "Blog list page navigation"
+    "message": "Navigace po stránkách blogu"
   },
   "theme.blog.paginator.newerEntries": {
-    "message": "Newer entries"
+    "message": "Novější příspěvky"
   },
   "theme.blog.paginator.olderEntries": {
-    "message": "Older entries"
+    "message": "Starší příspěvky"
   },
   "theme.blog.post.paginator.navAriaLabel": {
-    "message": "Blog post page navigation"
+    "message": "Navigace po stránkách příspěvku"
   },
   "theme.blog.post.paginator.newerPost": {
-    "message": "Newer post"
+    "message": "Novější příspěvek"
   },
   "theme.blog.post.paginator.olderPost": {
-    "message": "Older post"
+    "message": "Starší příspěvek"
   },
   "theme.tags.tagsPageLink": {
-    "message": "View all tags"
+    "message": "Zobrazit všechny tagy"
   },
   "theme.docs.breadcrumbs.navAriaLabel": {
-    "message": "Breadcrumbs"
+    "message": "Chléb a máslo"
   },
   "theme.colorToggle.ariaLabel": {
-    "message": "Switch between dark and light mode (currently {mode})"
+    "message": "Přepnout mezi tmavým a světlým režimem (aktuálně {mode})"
   },
   "theme.colorToggle.ariaLabel.mode.dark": {
-    "message": "dark mode"
+    "message": "tmavý režim"
   },
   "theme.colorToggle.ariaLabel.mode.light": {
-    "message": "light mode"
+    "message": "světlý režim"
   },
   "theme.docs.DocCard.categoryDescription.plurals": {
-    "message": "1 item|{count} items"
+    "message": "1 položka|{count} položek"
   },
   "theme.docs.tagDocListPageTitle.nDocsTagged": {
-    "message": "One doc tagged|{count} docs tagged"
+    "message": "Jeden dokument označen|{count} dokumentů označeno"
   },
   "theme.docs.tagDocListPageTitle": {
-    "message": "{nDocsTagged} with \"{tagName}\""
+    "message": "{nDocsTagged} s \"{tagName}\""
   },
   "theme.docs.paginator.navAriaLabel": {
-    "message": "Docs pages"
+    "message": "Stránky dokumentů"
   },
   "theme.docs.paginator.previous": {
-    "message": "Previous"
+    "message": "Předchozí"
   },
   "theme.docs.paginator.next": {
-    "message": "Next"
+    "message": "Další"
   },
   "theme.docs.versionBadge.label": {
-    "message": "Version: {versionLabel}"
+    "message": "Verze: {versionLabel}"
   },
   "theme.common.editThisPage": {
-    "message": "Edit this page"
+    "message": "Upravit tuto stránku"
   },
   "theme.common.headingLinkTitle": {
-    "message": "Direct link to {heading}"
+    "message": "Přímý odkaz na {heading}"
   },
   "theme.docs.versions.unreleasedVersionLabel": {
-    "message": "This is unreleased documentation for {siteTitle} {versionLabel} version."
+    "message": "Toto je nepublikovaná dokumentace pro {siteTitle} verzi {versionLabel}."
   },
   "theme.docs.versions.unmaintainedVersionLabel": {
-    "message": "This is documentation for {siteTitle} {versionLabel}, which is no longer actively maintained."
+    "message": "Toto je dokumentace pro {siteTitle} verzi {versionLabel}, která již není aktivně udržována."
   },
   "theme.docs.versions.latestVersionSuggestionLabel": {
-    "message": "For up-to-date documentation, see the {latestVersionLink} ({versionLabel})."
+    "message": "Pro aktuální dokumentaci, viz {latestVersionLink} ({versionLabel})."
   },
   "theme.docs.versions.latestVersionLinkLabel": {
-    "message": "latest version"
+    "message": "nejnovější verze"
   },
   "theme.lastUpdated.atDate": {
-    "message": " on {date}"
+    "message": " dne {date}"
   },
   "theme.lastUpdated.byUser": {
-    "message": " by {user}"
+    "message": " od {user}"
   },
   "theme.lastUpdated.lastUpdatedAtBy": {
-    "message": "Last updated{atDate}{byUser}"
+    "message": "Naposledy aktualizováno{atDate}{byUser}"
   },
   "theme.navbar.mobileVersionsDropdown.label": {
-    "message": "Versions"
+    "message": "Verze"
   },
   "theme.tags.tagsListLabel": {
-    "message": "Tags:"
+    "message": "Tagy:"
   },
   "theme.AnnouncementBar.closeButtonAriaLabel": {
-    "message": "Close"
+    "message": "Zavřít"
   },
   "theme.admonition.caution": {
-    "message": "caution"
+    "message": "pozor"
   },
   "theme.admonition.danger": {
-    "message": "danger"
+    "message": "nebezpečí"
   },
   "theme.admonition.info": {
-    "message": "info"
+    "message": "informace"
   },
   "theme.admonition.note": {
-    "message": "note"
+    "message": "poznámka"
   },
   "theme.admonition.tip": {
     "message": "tip"
   },
   "theme.admonition.warning": {
-    "message": "warning"
+    "message": "varování"
   },
   "theme.blog.sidebar.navAriaLabel": {
-    "message": "Blog recent posts navigation"
+    "message": "Navigace po nejnovějších příspěvcích blogu"
   },
   "theme.CodeBlock.copied": {
-    "message": "Copied"
+    "message": "Zkopírováno"
   },
   "theme.CodeBlock.copyButtonAriaLabel": {
-    "message": "Copy code to clipboard"
+    "message": "Kopírovat kód do schránky"
   },
   "theme.CodeBlock.copy": {
-    "message": "Copy"
+    "message": "Kopírovat"
   },
   "theme.CodeBlock.wordWrapToggle": {
-    "message": "Toggle word wrap"
+    "message": "Přepnout zalamování slov"
   },
   "theme.DocSidebarItem.expandCategoryAriaLabel": {
-    "message": "Expand sidebar category '{label}'"
+    "message": "Rozbalit kategorii postranního panelu '{label}'"
   },
   "theme.DocSidebarItem.collapseCategoryAriaLabel": {
-    "message": "Collapse sidebar category '{label}'"
+    "message": "Sbalit kategorii postranního panelu '{label}'"
   },
   "theme.NavBar.navAriaLabel": {
-    "message": "Main"
+    "message": "Hlavní"
   },
   "theme.NotFound.p1": {
-    "message": "We could not find what you were looking for."
+    "message": "Nebylo možné najít, co jste hledali."
   },
   "theme.NotFound.p2": {
-    "message": "Please contact the owner of the site that linked you to the original URL and let them know their link is broken."
+    "message": "Kontaktujte prosím vlastníka webu, který vás odkázal na původní URL, a informujte ho o tom, že jeho odkaz nefunguje."
   },
   "theme.TOCCollapsible.toggleButtonLabel": {
-    "message": "On this page"
+    "message": "Na této stránce"
   },
   "theme.navbar.mobileLanguageDropdown.label": {
-    "message": "Languages"
+    "message": "Jazyky"
   },
   "theme.blog.post.readingTime.plurals": {
-    "message": "One min read|{readingTime} min read"
+    "message": "Jedna minuta čtení|{readingTime} minut čtení"
   },
   "theme.docs.sidebar.navAriaLabel": {
-    "message": "Docs sidebar"
+    "message": "Postranní panel dokumentů"
   },
   "theme.docs.sidebar.collapseButtonTitle": {
-    "message": "Collapse sidebar"
+    "message": "Sbalit postranní panel"
   },
   "theme.docs.sidebar.collapseButtonAriaLabel": {
-    "message": "Collapse sidebar"
+    "message": "Sbalit postranní panel"
   },
   "theme.docs.breadcrumbs.home": {
-    "message": "Home page"
+    "message": "Domovská stránka"
   },
   "theme.blog.post.readMore": {
-    "message": "Read more"
+    "message": "Přečíst více"
   },
   "theme.blog.post.readMoreLabel": {
-    "message": "Read more about {title}"
+    "message": "Přečtěte si více o {title}"
   },
   "theme.docs.sidebar.closeSidebarButtonAriaLabel": {
-    "message": "Close navigation bar"
+    "message": "Zavřít navigační panel"
   },
   "theme.navbar.mobileSidebarSecondaryMenu.backButtonLabel": {
-    "message": "← Back to main menu"
+    "message": "← Zpět na hlavní menu"
   },
   "theme.docs.sidebar.expandButtonTitle": {
-    "message": "Expand sidebar"
+    "message": "Rozbalit postranní panel"
   },
   "theme.docs.sidebar.expandButtonAriaLabel": {
-    "message": "Expand sidebar"
+    "message": "Rozbalit postranní panel"
   },
   "theme.docs.sidebar.toggleSidebarButtonAriaLabel": {
-    "message": "Toggle navigation bar"
+    "message": "Přepnout navigační panel"
   },
   "theme.SearchBar.seeAll": {
-    "message": "See all {count} results"
+    "message": "Zobrazit všechny {count} výsledky"
   },
   "theme.SearchPage.documentsFound.plurals": {
-    "message": "One document found|{count} documents found"
+    "message": "Jeden dokument nalezen|{count} dokumentů nalezeno"
   },
   "theme.SearchPage.existingResultsTitle": {
-    "message": "Search results for \"{query}\""
+    "message": "Výsledky hledání pro \"{query}\""
   },
   "theme.SearchPage.emptyResultsTitle": {
-    "message": "Search the documentation"
+    "message": "Hledat dokumentaci"
   },
   "theme.SearchPage.inputPlaceholder": {
-    "message": "Type your search here"
+    "message": "Zadejte svůj dotaz zde"
   },
   "theme.SearchPage.inputLabel": {
-    "message": "Search"
+    "message": "Hledat"
   },
   "theme.SearchPage.algoliaLabel": {
-    "message": "Search by Algolia"
+    "message": "Hledat pomocí Algolia"
   },
   "theme.SearchPage.noResultsText": {
-    "message": "No results were found"
+    "message": "Nebyl nalezen žádný výsledek"
   },
   "theme.SearchPage.fetchingNewResults": {
-    "message": "Fetching new results..."
+    "message": "Načítání nových výsledků..."
   },
   "theme.SearchBar.label": {
-    "message": "Search"
+    "message": "Hledat"
   },
   "theme.SearchModal.searchBox.resetButtonTitle": {
-    "message": "Clear the query"
+    "message": "Vymazat dotaz"
   },
   "theme.SearchModal.searchBox.cancelButtonText": {
-    "message": "Cancel"
+    "message": "Zrušit"
   },
   "theme.SearchModal.startScreen.recentSearchesTitle": {
-    "message": "Recent"
+    "message": "Nedávné"
   },
   "theme.SearchModal.startScreen.noRecentSearchesText": {
-    "message": "No recent searches"
+    "message": "Žádné nedávné hledání"
   },
   "theme.SearchModal.startScreen.saveRecentSearchButtonTitle": {
-    "message": "Save this search"
+    "message": "Uložit toto hledání"
   },
   "theme.SearchModal.startScreen.removeRecentSearchButtonTitle": {
-    "message": "Remove this search from history"
+    "message": "Odstranit toto hledání z historie"
   },
   "theme.SearchModal.startScreen.favoriteSearchesTitle": {
-    "message": "Favorite"
+    "message": "Oblíbené"
   },
   "theme.SearchModal.startScreen.removeFavoriteSearchButtonTitle": {
-    "message": "Remove this search from favorites"
+    "message": "Odstranit toto hledání z oblíbených"
   },
   "theme.SearchModal.errorScreen.titleText": {
-    "message": "Unable to fetch results"
+    "message": "Nelze načíst výsledky"
   },
   "theme.SearchModal.errorScreen.helpText": {
-    "message": "You might want to check your network connection."
+    "message": "Můžete zkontrolovat své připojení k síti."
   },
   "theme.SearchModal.footer.selectText": {
-    "message": "to select"
+    "message": "pro výběr"
   },
   "theme.SearchModal.footer.selectKeyAriaLabel": {
-    "message": "Enter key"
+    "message": "Klávesa Enter"
   },
   "theme.SearchModal.footer.navigateText": {
-    "message": "to navigate"
+    "message": "pro navigaci"
   },
   "theme.SearchModal.footer.navigateUpKeyAriaLabel": {
-    "message": "Arrow up"
+    "message": "Šipka nahoru"
   },
   "theme.SearchModal.footer.navigateDownKeyAriaLabel": {
-    "message": "Arrow down"
+    "message": "Šipka dolů"
   },
   "theme.SearchModal.footer.closeText": {
-    "message": "to close"
+    "message": "pro zavření"
   },
   "theme.SearchModal.footer.closeKeyAriaLabel": {
-    "message": "Escape key"
+    "message": "Klávesa Escape"
   },
   "theme.SearchModal.footer.searchByText": {
-    "message": "Search by",
-    "description": "The text explain that the search is making by Algolia"
+    "message": "Hledat pomocí",
+    "description": "Text vysvětlující, že hledání probíhá pomocí Algolia"
   },
   "theme.SearchModal.noResultsScreen.noResultsText": {
-    "message": "No results for"
+    "message": "Žádné výsledky pro"
   },
   "theme.SearchModal.noResultsScreen.suggestedQueryText": {
-    "message": "Try searching for"
+    "message": "Zkuste hledat pro"
   },
   "theme.SearchModal.noResultsScreen.reportMissingResultsText": {
-    "message": "Believe this query should return results?"
+    "message": "Myslíte si, že tento dotaz by měl vrátit výsledky?"
   },
   "theme.SearchModal.noResultsScreen.reportMissingResultsLinkText": {
-    "message": "Let us know."
+    "message": "Dejte nám vědět."
   },
   "theme.SearchModal.placeholder": {
-    "message": "Search docs"
+    "message": "Hledat dokumenty"
   },
   "theme.blog.post.plurals": {
-    "message": "One post|{count} posts"
+    "message": "Jeden příspěvek|{count} příspěvků"
   },
   "theme.blog.tagTitle": {
-    "message": "{nPosts} tagged with \"{tagName}\""
+    "message": "{nPosts} označeno tagem \"{tagName}\""
   },
   "theme.blog.author.pageTitle": {
     "message": "{authorName} - {nPosts}"
   },
   "theme.blog.authorsList.pageTitle": {
-    "message": "Authors",
-    "description": "The title of the authors page"
+    "message": "Autoři",
+    "description": "Nadpis stránky autorů"
   },
   "theme.blog.authorsList.viewAll": {
-    "message": "View all authors"
+    "message": "Zobrazit všechny autory"
   },
   "theme.blog.author.noPosts": {
-    "message": "This author has not written any posts yet."
+    "message": "Tento autor ještě nenapsal žádné příspěvky."
   },
   "theme.contentVisibility.unlistedBanner.title": {
-    "message": "Unlisted page"
+    "message": "Nezařazená stránka"
   },
   "theme.contentVisibility.unlistedBanner.message": {
-    "message": "This page is unlisted. Search engines will not index it, and only users having a direct link can access it."
+    "message": "Tato stránka není zařazena. Vyhledávače ji neindexují a přístup k ní mají pouze uživatelé s přímým odkazem."
   },
   "theme.contentVisibility.draftBanner.title": {
-    "message": "Draft page"
+    "message": "Koncept stránky"
   },
   "theme.contentVisibility.draftBanner.message": {
-    "message": "This page is a draft. It will only be visible in dev and be excluded from the production build."
+    "message": "Tato stránka je koncept. Bude viditelná pouze v režimu vývoje a bude vyloučena z produkčního sestavení."
   },
   "theme.ErrorPageContent.tryAgain": {
-    "message": "Try again"
+    "message": "Zkuste to znovu"
   },
   "theme.common.skipToMainContent": {
-    "message": "Skip to main content"
+    "message": "Přejít na hlavní obsah"
   },
   "theme.tags.tagsPageTitle": {
-    "message": "Tags"
+    "message": "Tagy"
   },
   "Get Started": {
-    "message": "Get Started"
+    "message": "Začít"
   },
   "Supported devices": {
-    "message": "Supported devices"
+    "message": "Podporovaná zařízení"
   },
   "Elevate Your LEGO® Creations": {
-    "message": "Elevate Your LEGO® Creations"
+    "message": "Pozvedněte své LEGO® výtvory"
   },
   "Download the Controlz": {
-    "message": "Download the Controlz"
+    "message": "Stáhněte Controlz"
   },
   "You can download the app from the official stores:": {
-    "message": "You can download the app from the official stores:"
+    "message": "Aplikaci můžete stáhnout z oficiálních obchodů:"
   },
   "theme.colorToggle.ariaLabel.mode.system": {
-    "message": "system mode"
+    "message": "systémový režim"
   },
   "theme.navbar.mobileDropdown.collapseButton.expandAriaLabel": {
-    "message": "Expand the dropdown"
+    "message": "Rozbalit rozbalovací nabídku"
   },
   "theme.navbar.mobileDropdown.collapseButton.collapseAriaLabel": {
-    "message": "Collapse the dropdown"
+    "message": "Sbalit rozbalovací nabídku"
   }
 }
